ruma-identifiers/tests/ui/02-invalid-id-macros.stderr
error: proc macro panicked
 --> $DIR/02-invalid-id-macros.rs:2:13
  |
2 |     let _ = ruma_identifiers::event_id!("39hvsi03hlne:example.com");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Invalid event id
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: proc macro panicked
 --> $DIR/02-invalid-id-macros.rs:3:13
  |
3 |     let _ = ruma_identifiers::event_id!("acR1l0raoZnm60CBwAVgqbZqoO/mYU81xysh1u7XcJk");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Invalid event id
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: proc macro panicked
 --> $DIR/02-invalid-id-macros.rs:4:13
  |
4 |     let _ = ruma_identifiers::room_alias_id!("alias:server.tld");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Invalid room_alias_id
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: proc macro panicked
 --> $DIR/02-invalid-id-macros.rs:5:13
  |
5 |     let _ = ruma_identifiers::room_id!("1234567890:matrix.org");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Invalid room_id
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: proc macro panicked
 --> $DIR/02-invalid-id-macros.rs:6:13
  |
6 |     let _ = ruma_identifiers::room_version_id!("");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Invalid room_version_id
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: proc macro panicked
 --> $DIR/02-invalid-id-macros.rs:7:13
  |
7 |     let _ = ruma_identifiers::server_name!("");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Invalid server_name
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: proc macro panicked
 --> $DIR/02-invalid-id-macros.rs:8:13
  |
8 |     let _ = ruma_identifiers::user_id!("user:ruma.io");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Invalid user_id
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
