ruma-identifiers/tests/ui/02-invalid-id-macros.rs
fn main() {
    let _ = ruma_identifiers::event_id!("39hvsi03hlne:example.com");
    let _ = ruma_identifiers::event_id!("acR1l0raoZnm60CBwAVgqbZqoO/mYU81xysh1u7XcJk");
    let _ = ruma_identifiers::room_alias_id!("alias:server.tld");
    let _ = ruma_identifiers::room_id!("1234567890:matrix.org");
    let _ = ruma_identifiers::room_version_id!("");
    let _ = ruma_identifiers::server_name!("");
    let _ = ruma_identifiers::user_id!("user:ruma.io");
}
